2006-02-13  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c:
	* src/gnome/glade/account.glade: Andreas Köhler's patch to convert
	the account types list in the account edit dialog to a
	GtkTreeView/GtkListStore.

	* src/gnome/gnc-plugin-page-register.c: Andreas Köhler's patch to
	prevent crash when voiding a transaction.

	* src/gnome/glade/sched-xact.glade:
	* src/gnome/glade/account.glade: Andreas Köhler's patch to wrap
	label text in a couple of dialogs.

2006-02-13  Derek Atkins  <derek@ihtfp.com>

	* src/backend/postgres/table.m4:
	  use glib macro instead of cast to convert pointer to int.
	  Fixes #330581.

	* src/report/standard-reports/advanced-portfolio.scm:
	  revert r13244 in this file because it's badly formed and
	  breaks the report.  Reopened bug #314554.

2006-02-12  Neil Williams <linux@codehelp.co.uk>

	* src/calculation/fin.c : Fix Bug 107876 - financial
	calculator would call exit(1) if calculation resulted
	in an interest rate of zero.

2006-02-12  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qofbackend.h : Add error value for files that
	cannot be opened. ERR_FILEIO_READ_ERROR.
	* lib/libqof/qof/qofsession.c : Improve QOF_TYPE_COLLECT handling 
	and recursive copies
	* lib/libqof/backend/file/qsf-backend.c : Check that files can be opened before
	trying to work out their type. Use new QofBackendError value
	if open to read fails.
	* src/engine/test-core/test-stuff.c : Ensuring get_random_double 
	returns at least some decimal places more often than not.

2006-02-12  Derek Atkins  <derek@ihtfp.com>

	* src/business/*/*.scm:
	  rename gnc:owner-get-address-dep to
	  gnc:owner-get-name-and-address-dep in preparation of
	  some other patches.

	* src/business/business-core/business-core.scm:
	  add gnc:owner-get-name-dep and gnc:owner-get-address-dep APIs
	* src/business/business-reports/fancy-invoice.scm:
	  Change the font of the client company name to match the
	  owner company name.  Fixes #327545.
